package org.example.sample7.mapper;

import org.mapstruct.Mapper;
import org.mapstruct.Mapping;
import org.mapstruct.MappingTarget;
import org.mapstruct.factory.Mappers;

import org.mapstruct.ReportingPolicy;
import org.mapstruct.BeanMapping;
import org.mapstruct.DecoratedWith;
import org.mapstruct.InheritInverseConfiguration;



@Mapper(componentModel = "spring" , unmappedTargetPolicy = ReportingPolicy.WARN , uses = { org.example.sample3.mapper.Sample3Dto2DomainMapper.class,  } )
public interface Sample7Dto2DomainMapper {

  
     /**
     * source をorg.example.sample7.model.Sample7Domain クラスへ変換する。
     * @Mapping(source = "param1", target = "param2") などで、プロパティ名の関連付けも可能
     * @BeanMapping(ignoreByDefault = true)とした場合は、プロパティ名一致による自動変換はおこなわない。
     * @param source
     * @return
     */
    @Mapping(source = "sample3dtos", target = "sample3domains")
    org.example.sample7.model.Sample7Domain toDomain(org.example.sample7.model.Sample7Dto source);



     /**
     * org.example.sample7.model.Sample7Dto source の各プロパティをorg.example.sample7.model.Sample7Domain target へコピーする。
     * @Mapping(source = "param1", target = "param2") などで、プロパティ名の関連付けも可能
     * @BeanMapping(ignoreByDefault = true)とした場合は、プロパティ名一致による自動変換はおこなわない。
     * @param source
     * @return
     */
    @Mapping(source = "sample3dtos", target = "sample3domains")
    void toDomainUpdate(org.example.sample7.model.Sample7Dto source, @MappingTarget org.example.sample7.model.Sample7Domain target);


}