@startuml

package from{
    class Sample7Dto{
        - sample3dtos:List<Sample3Dto>
    }
    class Sample3Dto {
        - orderId String
        - orderValue String
        - param2 String
        - param3 String
    }
}

package to{
    class Sample3Domain {
        - order Order
        - param2 Integer
        - domainParam3 String
    }

    class Order {
        - id String
        - value String
    }
    class Sample7Domain{
        - sample3domains:List<Sample3Domain>
    }
}

interface Sample3Dto2DomainMapper{
    + toOrder(dto Sample3Dto) : Order
    + toDomain(dto Sample3Dto) : Sample3Domain
}

interface Sample7Dto2DomainMapper{
    + toDomain(dto Sample7Dto) : Sample7Domain
}

Sample3Dto .> Sample3Domain :copy
Sample3Dto .> Order :copy
' Sample3Dto2DomainMapper ..> Sample3Dto: from
' Sample3Dto2DomainMapper ..> Sample3Domain: to

Sample7Dto2DomainMapper ..> Sample7Dto: from
Sample7Dto2DomainMapper ..> Sample7Domain: to
Sample7Dto2DomainMapper .> Sample3Dto2DomainMapper: use

Sample7Dto .> Sample7Domain :copy
Sample7Dto *..> Sample3Dto: field
Sample7Domain *..> Sample3Domain : field
Sample3Domain --> Order : field

@enduml
